<resources>
    <string name="app_name">FriendlyMony</string>
    <string name="google_app_key">AIzaSyD8bw72R-bXhXCfs9BGdyIh_Q-nGfmDpnw</string>
    <string name="facebook_app_id">1096055843925193</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">d50724d247fc84207bb0679628c05154</string>
    <string name="sender_id">70663589786</string>
    <string name="intro1">Connect people around you</string>
    <string name="intro2">Find nearest soulmate</string>
    <string name="intro3">Instant chat, voice &amp; video calls</string>
    <string name="loginto_account">Log in to your account</string>
    <string name="termsncondition">privacy policy, terms &amp; conditions</string>
    <string name="notpost">(We won\'t post anything on your wall)</string>
    <string name="referalcode"><u>Do you have a Referral code?</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="q1">What is your educational qualification?</string>
    <string name="q2">Do you smoke?</string>
    <string name="q3">Do you drink?</string>
    <string name="q4">Do you discuss politics?</string>
    <string name="q5">Are you employed?</string>
    <string name="q6">Would you date someone who earns more than you?</string>
    <string name="q6_me">Would date someone who earns more than me?</string>
    <string name="writesomthing">Write something about yourself</string>
    <string name="invite">Invite your friend to FriendlyMony</string>
    <string name="refer">Refer your friends and earn additional 7 days FREE usage of App*</string>
    <string name="free">(7 days FREE on Sign up) + (7 days FREE on Referral) = 14 days FREE usage</string>
    <string name="tap">(Tap above code to copy)</string>
    <string name="liked_you">Check out people who are already interested in you and liked you.</string>
    <string name="crush_you">Check out people who are already crush you.</string>
    <string name="msg_no_internet">No internet connection.Check your Internet connection and try again</string>
    <string name="logout">Logging out of the FriendlyMony will remove some of your data stored with us and you won\'t receive any notifications as well</string>
    <string name="cruch_buy">Crush on someone? feel free to swipe up &amp; express your feelings.</string>
    <string name="boost_buy">Boost your profile to highlight it and increase your chances of getting your perfect partner by up to 6X </string>
    <string name="auto_renew">Automatic renewals unless changed from account settings.</string>
    <string name="adv1">Send unlimited lnterests</string>
    <string name="adv2">Unlimited Chat and with unlimited matching profiles</string>
    <string name="adv3">You are in total control. No one can ping you unless its a Match</string>
    <string name="adv4">See everyone who likes you and match with them Instantly</string>
    <string name="adv5">Daily recommendations as per your profile settings</string>
    <string name="adv6">Your Ideal partner search is not limited to any geographical boundary.You can Search and Connect to your Ideal partner across the Globe.</string>
    <string name="adv7">Unlimited text messages with read/received information</string>
    <string name="adv8">Complementary Video calling up to 30 mins/day</string>
    <string name="bb1">Boost your profile even if you are a FREE member</string>
    <string name="bb2">Reach to maximum profiles to  find a potential match</string>
    <string name="bb3">Increase your chances of finding your Ideal partner by up to 6X</string>
    <string name="bb4">Unlimited chat with them on finding your matches</string>
    <string name="bb5">You can use 1 or more boosts at once to increase your chances of potential match</string>
    <string name="current_version">0.9.1</string>
    <string name="splash_app_title">Sample Video Chat Java</string>
    <string name="splash_create_session_error">Create session errors:</string>
    <string name="dlg_signal_error">Disconnected… Please check your Internet connection!</string>
    <string name="dlg_relogin_wait">You are still connecting.. Please try once more</string>
    <string name="dlg_login">Login…</string>
    <string name="dlg_sign_in">Sign In…</string>
    <string name="dlg_updating_user">Updating user…</string>
    <string name="dlg_creating_new_user">Creating new user…</string>
    <string name="dlg_logout">Logout…</string>
    <string name="dlg_loading_opponents">Loading opponents…</string>
    <string name="dlg_retry">Retry</string>
    <string name="dlg_allow">Allow</string>
    <string name="login_chat_retry">Trying Relogin. Please wait a moment</string>
    <string name="notification_title">You have an active call</string>
    <string name="notification_text">Touch takes you back to the call %1$s</string>
    <string name="error">Error</string>
    <string name="error_credentials_empty">Credentials are wrong or empty. You have to set:
        Application ID, Authentification Key, Authentification Secret, Account Key in constants in App.java
        and you have to set Sender ID in the string resources to launch application.
        If you haven\'t them you can register new account and application at https://admin.quickblox.com
        then put Application credentials from Overview page + Account key from https://admin.quickblox.com/account/settings</string>
    <string name="login_data_error">Wrong login</string>
    <string name="username_data_error">Wrong username</string>
    <string name="error_max_opponents_count">You can select up to %d opponents</string>
    <string name="sign_up_error">Error creating new user, please try again</string>
    <string name="sign_in_error">Error SignIn user, please try again</string>
    <string name="sign_in_error_with_error">Sign In error. Error</string>
    <string name="sign_in_error_without_error">Sign In error</string>
    <string name="logout_user_with_error">Logout user error. Error</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_connection_error">Connection failed. Please check your internet connection.</string>
    <string name="no_responce_timeout">No response received within reply timeout</string>
    <string name="error_empty_login">Login can not be empty</string>
    <string name="error_empty_chat_room_name">Chat room name can not be empty</string>
    <string name="error_permission_video">You should allow Camera permission</string>
    <string name="error_permission_audio">You should allow Microphone permission</string>
    <string name="login_chat_login_error">Login Chat error. Please relogin. Error</string>
    <string name="update_user_error">Update user error. Error</string>
    <string name="loading_users_error">Loading users error. Error</string>
    <string name="permission_unavailable">%s is not available now!</string>
    <string name="field_name_user_login">User name</string>
    <string name="field_name_user_fullname">User Full Name</string>
    <string name="error_name_must_not_contain_special_characters_from_app">%1$s must contain 3 &#8212; %2$s alphanumeric Latin characters without spaces, the first char must be a letter</string>
    <string name="action_start_login">Done</string>
    <string name="action_settings">Settings</string>
    <string name="action_screen_share">Screen share</string>
    <string name="action_update_opponens_list">Update opponents list</string>
    <string name="action_logout">Logout</string>
    <string name="action_start_video_call">Video call</string>
    <string name="action_start_audio_call">Audio call</string>
    <string name="action_dialogs_app_info">App Info</string>
    <string name="actionbar_title_settings">Settings</string>
    <string name="title_login_activity">Enter to Videochat</string>
    <string name="subtitle_text_logged_in_as">Logged in as %s</string>
    <string name="title_one_user_selected">%s user selected</string>
    <string name="tile_many_users_selected">%s users selected</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="also_on_call">Also on call:</string>
    <string name="edit_opponents_list">Edit opponents list</string>
    <string name="incoming_audio_call">Incoming Audio Call</string>
    <string name="incoming_video_call">Incoming Video Call</string>
    <string name="outgoing_audio_video_call_title">%s\n\nRinging</string>
    <string name="user_list_on_call">User 1, User 2, User 3, User 4, User 5, User 6</string>
    <string name="opponent_pending">Pending</string>
    <string name="opponent_closed">Closed</string>
    <string name="text_incoming_audio_call">Incoming Audio Call</string>
    <string name="text_incoming_video_call">Incoming Video Call</string>
    <string name="text_status_connect">Connect…</string>
    <string name="text_status_checking">Checking…</string>
    <string name="text_status_connected">Connected</string>
    <string name="text_status_disconnected">Disconnected</string>
    <string name="text_status_rejected">Rejected</string>
    <string name="text_status_no_answer">No answer</string>
    <string name="text_status_hang_up">Hung up</string>
    <string name="text_status_closed">Closed</string>
    <string name="text_status_time_out">Time Out</string>
    <string name="text_status_failed">Failed</string>
    <string name="text_welcoming_message">Please enter Login and Username.</string>
    <string name="hint_user_login">Login</string>
    <string name="hint_user_full_name">Username</string>
    <string name="text_select_users_to_call">Select users you want to call</string>
    <string name="call_was_stopped_connection_lost">Call was stopped because connection was lost</string>
    <string name="connection_lost">Connection lost</string>
    <string name="text_push_notification_message">"%s is calling you"</string>
    <string name="title_video_category">Video</string>
    <string name="title_call_settings_category">Call Settings</string>
    <string name="pref_default_value">Default</string>
    <string name="pref_default_camera_key">default_camera_preference</string>
    <string name="pref_default_camera_title">Default Camera</string>
    <string name="pref_default_camera_dlg">Select default camera</string>
    <string name="pref_default_camera_default">0</string>
    <string name="pref_frame_rate_key">frame_rate</string>
    <string name="pref_frame_rate_title">Frame Rate (0&#8211;30)</string>
    <string name="pref_frame_rate_default">0</string>
    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Video Format</string>
    <string name="pref_resolution_dlg">Enter RTC local video resolution</string>
    <string name="pref_resolution_default">-1</string>
    <string name="pref_startbitrate_key">startbitrate_preference</string>
    <string name="pref_startbitrate_title">Start bitrate setting</string>
    <string name="pref_startbitrate_dlg">Start bitrate setting</string>
    <string name="pref_startbitrate_default">Default</string>
    <string name="pref_startbitratevalue_key">startbitratevalue_preference</string>
    <string name="pref_startbitratevalue_title">Bandwidth (0&#8211;2000)</string>
    <string name="pref_startbitratevalue_default">0</string>
    <string name="pref_disable_built_in_aec_key">disable_built_in_aec_preference</string>
    <string name="lbl_name_on_card">Name on Card</string>
    <string name="lbl_expiry_date">Expiry Date</string>
    <string name="lbl_cvv">CVV</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_your_account_has_been_blocked_for_terms">Your account has been blocked for Terms</string>
    <string name="lbl_violations_please_contact">violations. Please contact</string>
    <string name="lbl_support_email">support@friendlymony.com</string>
    <string name="lbl_credit_debit_card_number">Credit / Debit Card Number</string>
</resources>