<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.BlockUserActivity">

    <TextView
        android:id="@+id/abu_tvLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_alignParentEnd="true"
        android:textSize="16sp"
        android:visibility="gone"
        android:layout_margin="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:textStyle="bold"
        android:background="?attr/selectableItemBackground"
        android:text="@string/lbl_logout"/>

    <TextView
        android:id="@+id/abu_tvTextMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="@string/lbl_your_account_has_been_blocked_for_terms"/>


    <TextView
        android:id="@+id/abu_tvTextMsg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_below="@+id/abu_tvTextMsg"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:text="@string/lbl_violations_please_contact"/>

    <TextView
        android:id="@+id/abu_tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/abu_tvTextMsg2"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/lbl_support_email"/>

</RelativeLayout>