<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragments.register.SignupFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"></androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Referrals"
                android:textColor="@color/grey_textDark"
                android:textSize="@dimen/font_size_empty_view" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_220sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/img_refer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/invite"
                android:textColor="@color/grey_textDark"
                android:textSize="@dimen/font_size_medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/refer"
                android:textColor="@color/grey_textDark"
                android:textSize="@dimen/font_size_medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/free"
                android:textColor="@color/grey_textDark"
                android:textSize="@dimen/font_size_medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_all"
                android:gravity="center"
                android:text="Referral Code"
                android:textColor="@color/grey_textDark"
                android:textSize="@dimen/font_size_large"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_pink_dash"
                android:text=""
                android:textAllCaps="false"
                android:textColor="@color/pink"
                android:textSize="@dimen/font_size_large"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/tap"
                android:textColor="@color/grey_textDark"
                android:textSize="@dimen/font_size_medium" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_all"
                android:gravity="center"
                android:text="Tap &amp; Share"
                android:textColor="@color/grey_textDark"
                android:textSize="@dimen/font_size_large"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_gradient_horizontal_rounded"
                android:text="Share Now"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>